Zero build broken after JDK-8213199 (GC abstraction for Assembler::needs_explicit_null_check())

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • gc
    • b20

      x86_64-zero:

      /home/buildbot/worker/jdkX-linux/build/src/hotspot/share/asm/assembler.cpp:311:60: error: no 'bool MacroAssembler::uses_implicit_null_check(void*)' member function declared in class 'MacroAssembler'
       bool MacroAssembler::uses_implicit_null_check(void* address) {

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: