8213711: Zero build broken after JDK-8213199 (GC abstraction for Assembler::needs_explicit_null_check())

Reviewed-by: rkennke, stuefe