src/hotspot/cpu/zero/assembler_zero.hpp
@@ -47,6 +47,7 @@ class MacroAssembler : public Assembler {
   void align(int modulus);
   void bang_stack_with_offset(int offset);
   bool needs_explicit_null_check(intptr_t offset);
+  bool uses_implicit_null_check(void* address);
   RegisterOrConstant delayed_value_impl(intptr_t* delayed_value_addr,
                                         Register tmp, int offset);
  public:
